style.css
@import url('https://fonts.googleapis.com/css2?family=Astloch&display=swap');
@font-face {
  font-family: "Squarevetica-Regular";
  src: url("./assets/Squarevetica-Regular.otf") format("opentype");
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

:root {
  font-size: 62.5%;
}

body {
  font-size: 2rem;
  line-height: 2.6rem;
  font-family: sans-serif;
  /* text-transform: lowercase; */
  -webkit-font-smoothing: antialiased;
  width: 100%;
  overflow-x: hidden;
  background-color: rgb(243, 243, 243);
}

a {
  color: black;
  text-decoration: none;
}

h1 {
  font-size: 3rem;
  font-weight: 400;
  padding: .5rem 0 1.5rem;
}

h2 {
  display: inline-block;
  font-size: 2.8rem;
  font-weight: 200;
  font-family: "Squarevetica-Regular";
  background-color: rgba(247, 216, 1, .7);
  padding: .3rem 1.2rem .6rem;
  border-radius: 2.3rem;
  font-weight:normal;
  transition: .15s ease-in-out;
  margin-bottom: 1rem;
  box-shadow: 1px 1px 6px rgba(104, 104, 104, .4);
}

small {
  font-size: 1.4rem;
}

/* a:hover {
  text-decoration: underline;
} */

.d-grid {
  /* margin: 2rem;
  width: calc(100% - 4rem); */
  width: 100%;
  display: grid;
  grid-template-columns: 20px calc(60% - 20px) calc(40% - 20px) 20px;
  grid-auto-rows: 20px auto 350px 350px 350px 350px 350px 350px 40px 20px;
  gap:1px;
  grid-template-areas: 
  ". . . ."
  ". header header ."
  ". project-1 project-1 ."
  ". project-2 project-2 ."
  ". project-3 project-3 ."
  ". project-4 project-4 ."
  ". project-5 project-5 ."
  ". project-6 project-6 ."
  ". footer footer ."
  ". . . .";
}

.d-grid > div,
.header > div,
.header-nav,
.header-nav-sm
 {
  box-shadow: 0 0 0 1px rgb(104, 104, 104);
}

/* header */

.header {
  grid-area: header;
  display: grid;
  grid-template-columns: 7.2fr minmax(330px, 2.8fr);
  grid-template-areas:
  "header-left header-right";
  line-height: 3.6rem;
  gap:1px;
  font-size: 2.6rem;
}

span.mob-show,
div.mob-caption {
  display: none;
}

.header-left {
  grid-area: header-left;
  font-weight: 400;
}

.header-left span.name {
  font-family: "Squarevetica-Regular";
  font-size: 3rem;
  background-color: rgba(247, 216, 1, .7);
  padding: 0rem 1.2rem .2rem;
  border-radius: 2.5rem;
  font-weight:normal;
  box-shadow: 1px 1px 6px rgba(104, 104, 104, .4);
}

.header-left .mark:hover {
  box-shadow: 1px 1px 6px rgba(104, 104, 104, .3);
}

.about-me {
  padding: 1.2rem 1.5rem 1.5rem;
}

.header-description {
  padding: 1.5rem;
}

.header-right {
  grid-area: header-right;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows:2fr 8fr;
}

.header-right ul{
  columns: 2;
  list-style: none;
}

.header-right ul li{
  width: fit-content;
}

.header-nav,
.header-nav-sm {
  /* background-color: rgba(247, 216, 1, .7); */
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  font-size: 3.5rem;
}

.header-nav-sm{
  display:none;
}

.header-nav a {
  padding: 0 2rem;
}

.header-skills {
  padding: 1.5rem 0 1.5rem 1.5rem;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  font-size: 2rem;
}

.skills-container {
  width: 100%;
}

.mark {
  font-family: "Squarevetica-Regular";
  background-color: rgba(247, 216, 1, .7);
  padding: .1rem .7rem .3rem 1rem;
  border-radius: 1.8rem;
  font-size: 2.4rem;
  letter-spacing: 1px;
  transition: .1s ease-in-out;
}

.dot {
  font-size: 1.8rem;
}

.flex:before {
  content:"🔴";
}

.grid:before {
  content:"🔵";
}

.forms:before {
  content:"🟠";
}

.animation:before {
  content:"🟤";
}

.responsive:before {
  content:"🟢";
}

.bootstrap:before {
  content:"🟡";
}

.scss:before {
  content:"🟣";
}

/* projects */

[class*=project-] {
  display: grid;
  grid-template-columns: 50% calc(50% - 1px);
  grid-auto-rows: 1fr;
  gap: 1px;
  transition: .15s ease-in-out;
}

[class*=project-]:hover {
  background-color: rgba(247, 216, 1, .7);
}

[class*=project-]:hover h2 {
  background-color: rgba(247, 216, 1, 0);
  box-shadow: 1px 1px 6px rgba(104, 104, 104, .6);
}

.description {
  position: relative;
  padding: 1.5rem;
}

.description a:hover {
  text-decoration: underline;
}

.skills {
  position: absolute;
  width: 90%;
  bottom: 1.8rem;
  right: 1.5rem;
  display: flex;
  justify-content: flex-end;
}

.skills span {
  margin: 0 .5rem;
}

[class*=project-] > div.image{
  box-shadow: 0 0 0 1px rgb(104, 104, 104);
}

.image {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

[class*=image-container-] {
  height: 309px;
  width: 504px;
  box-shadow: 2px 2px 10px rgb(163, 163, 163);
  transition: .2s ease-in-out;
}

.image-container-1 {
  background: url(./assets/foodblog.png) center/contain no-repeat;
}

.image-container-2 {
  background: url(./assets/speakershop.png) center/contain no-repeat;
}

.image-container-3 {
  background: url(./assets/matchamaker.png) center/contain no-repeat;
}

.image-container-4 {
  background: url(./assets/periodic.png) center/contain no-repeat;
}

.image-container-5 {
  background: url(./assets/lowenhaupt.png) center/contain no-repeat;
}

.image-container-6 {
  background: url(./assets/grid-layout.png) center/contain no-repeat;
}

[class*=image-container-] p {
  width: 100%;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  text-align: center;
  font-size: 5.5rem;
  z-index: 10;
  pointer-events: none;
  opacity:0;
  transition: .2s ease-in-out;
}

[class*=image-container-]:hover {
  transform: scale(1.02);
}

[class*=image-container-]:hover p{
  opacity: 1;
}

/* footer */

.footer {
  font-size: 1.6rem;
  grid-area: footer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 2rem;
}

/* grid areas */

.project-1 {
  grid-area: project-1;
}

.project-2 {
  grid-area: project-2;
}

.project-3 {
  grid-area: project-3;
}

.project-4 {
  grid-area: project-4;
}

.project-5 {
  grid-area: project-5;
}

.project-6 {
  grid-area: project-6;
}

/* media queries */

@media screen and (max-width: 1200px) {
  .d-grid {
    grid-template-columns: 60% 40%;
    grid-auto-rows: auto 350px 350px 350px 350px 350px 350px 40px;
    grid-template-areas:
    "header header"
    "project-1 project-1"
    "project-2 project-2"
    "project-3 project-3"
    "project-4 project-4"
    "project-5 project-5"
    "project-6 project-6"
    "footer footer";
  }
} 

@media screen and (max-width: 1070px) {
  .header {grid-template-columns: 7.2fr minmax(200px, 2.8fr);
  }

  .header-right {
    grid-template-columns: 75% 25%;
    grid-template-rows:1fr;
  }

  .header-right ul{
    columns: 1;
  }

  .header-nav {
    /* background-color: rgba(247, 216, 1, .7); */
    order:2;
    flex-direction: column;
  }

  .d-grid {
    grid-auto-rows: auto 1fr 1fr 1fr 1fr 1fr 1fr 40px;
  }

  [class*=project-] {
    grid-template-columns: 1fr;
    grid-auto-rows: auto 350px;
    gap: 1px;
    transition: .15s ease-in-out;
  }

  .description {
    padding-bottom: 3.7rem;
  }

  .skills {
    bottom: .9rem;
  }
}

@media screen and (max-width: 835px) {
  .header {
    grid-template-columns: 1fr;
    grid-template-areas:
    "header-left"
    "header-right";
    line-height: 3.6rem;
    gap:1px;
    font-size: 2.6rem;
  }

  .header-left {
    display: grid;
    grid-template-columns: 9.2fr .8fr;
  }

  .header-right {
    grid-template-columns: 1fr;
  }

  .header-right ul{
    columns: 4;
  }

  .header-nav {
    display: none;
  }

  .header-nav-sm{
    display: flex;
    flex-direction: column;
  }
}

@media screen and (max-width: 610px) {
  .header-right ul{
    columns: 3;
  }
}

@media screen and (max-width: 550px) {
  .header{
    font-size: 2rem;
  }

  .header-left span.name {
    font-size: 2.4rem;
  }

  h2 {
    font-size: 2.5rem;
  }

  span.mob-hide {
    display: none;
  }

  span.mob-show {
    display: initial;
  }

  body {
    overflow-x: hidden;
  }
  
  .d-grid {
    grid-template-columns: 1fr;
    grid-auto-rows: auto;
    grid-template-areas:
    "header"
    "project-1"
    "project-2"
    "project-3"
    "project-4"
    "project-5"
    "project-6"
    "footer";
  }

  .header-left {
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: 50px 1fr;
  }

  .header-nav-sm{
    order:-1;
    flex-direction: row;
  }

  .header-right ul{
    columns: 2;
  }

  [class*=project-] {
    grid-template-columns: 1fr;
    grid-auto-rows: auto 250px auto;
    gap: 1px;
    transition: .15s ease-in-out;
  }

  [class*=image-container-] {
    height: 209px;
    width: 340px;
  }

  .description h2 {
    display: none;
  }

  div.mob-caption {
    display: initial;
    order: 1;
    padding: 1.5rem 1.5rem 0;
    display: flex;
    justify-content: center;
  }

  h2 {
    margin-bottom:0;
  }

  .image {
    order:2;
  }

  .description {
    order:3;
  }

  [class*=project-] > div.image {
    box-shadow: 0 0 0 0px rgb(104 104 104);
  }

  [class*=project-] > div.description {
    padding-top: 0;
    box-shadow: 0 0 0 0px rgb(104 104 104);
  }

  .footer {
    padding: 1rem;
  }
}

